feat: ruta para validar código de trabajador
